--- a/styles/index.module.css
+++ b/styles/index.module.css
@@ -1,18 +1,4 @@
-@font-face {
-  font-family: "ColfaxAI";
-  src: url(https://cdn.openai.com/API/fonts/ColfaxAIRegular.woff2)
-      format("woff2"),
-    url(https://cdn.openai.com/API/fonts/ColfaxAIRegular.woff) format("woff");
-  font-weight: normal;
-  font-style: normal;
-}
-@font-face {
-  font-family: "ColfaxAI";
-  src: url(https://cdn.openai.com/API/fonts/ColfaxAIBold.woff2) format("woff2"),
-    url(https://cdn.openai.com/API/fonts/ColfaxAIBold.woff) format("woff");
-  font-weight: bold;
-  font-style: normal;
-}
+
 .main,
 .main input {
   font-size: 16px;
@@ -21,15 +7,13 @@
   font-family: "ColfaxAI", Helvetica, sans-serif;
 }
 .main {
+	flex: 1 1 auto;
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding-top: 60px;
-}
-.main .icon {
-  width: 34px;
 }
 .main h3 {
+	text-align: center;
   font-size: 32px;
   line-height: 40px;
   font-weight: bold;
@@ -43,10 +27,10 @@
 }
 .main input[type="text"] {
   padding: 12px 16px;
-  border: 1px solid #10a37f;
+  border: 1px solid rgb(249, 94, 94);
   border-radius: 4px;
   margin-bottom: 24px;
-  outline-color: #10a37f;
+  outline-color: rgb(249, 94, 94);
 }
 .main ::placeholder {
   color: #8e8ea0;
@@ -55,13 +39,18 @@
 .main input[type="submit"] {
   padding: 12px 0;
   color: #fff;
-  background-color: #10a37f;
+  background-color: rgb(249, 94, 94);
   border: none;
   border-radius: 4px;
   text-align: center;
   cursor: pointer;
+  transition: all 0.25s ease 0s;
+}
+.main input[type="submit"]:hover {
+	background-color: rgba(249, 94, 94, 0.9);
 }
 .main .result {
   font-weight: bold;
-  margin-top: 40px;
+  margin: 20px 10px;
+
 }
