--- a/styles/global.css
+++ b/styles/global.css
@@ -14,13 +14,16 @@
 	font-style: normal;
  }
 
+ body {
+	background-color: aliceblue;
+ }
 
  .content {
 	min-height: 100vh;
+	max-width: 768px;
 	display: flex;
 	flex-direction: column;
 	justify-content: flex-start;
-	max-width: 768px;
 	margin: 0 auto;
 	font-size: 16px;
 	line-height: 24px;
